syntax = "proto3";
package user;
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

service UserService {
  rpc GetUser(GetUserReq) returns (User);
  rpc CreateUser(CreateUserReq) returns (User);
}

message User {
  int64 id = 1;
  string email = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateUserReq {
  oneof data{
    option (validate.required) = true;

    CreateUserReqInfo info = 1;
  }
}

message CreateUserReqInfo {
  string email = 1 [(validate.rules).string.email = true];
  string password = 2 [(validate.rules).string.pattern = "^[A-Za-z0-9]{6,72}$"];
  string name = 3 [(validate.rules).string = {min_len: 1, max_len: 10}];
}

message GetUserReq {
  int64 id = 1 [(validate.rules).int64.gte = 1];
}
